--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_cumpleanieros.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_cumpleanieros.jrxml
@@ -245,19 +245,20 @@
 	<columnFooter>
 		<band height="45" splitType="Stretch">
 			<line>
-				<reportElement x="605" y="0" width="100" height="1" uuid="2205fdd0-9795-4ff7-9c41-80cea52a1814"/>
+				<reportElement x="639" y="41" width="100" height="1" uuid="2205fdd0-9795-4ff7-9c41-80cea52a1814"/>
 			</line>
+		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="33" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="622" y="4" width="102" height="14" backcolor="#FFFFFF" uuid="13b6bd4b-3195-4a04-a30a-1e570dd35632"/>
+				<reportElement mode="Opaque" x="656" y="0" width="102" height="14" backcolor="#FFFFFF" uuid="13b6bd4b-3195-4a04-a30a-1e570dd35632"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
-	</columnFooter>
-	<pageFooter>
-		<band height="33" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
 		<band splitType="Stretch"/>
