--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5c97d53c-6c6d-4cd7-8205-e7d0bdf541e2">
 	<property name="ireport.zoom" value="1.3310000000000006"/>
-	<property name="ireport.x" value="171"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -19,7 +19,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT  DATE_FORMAT(m.fechasalidamision, '%d/%m/%Y') as Desde, DATE_FORMAT(m.fecharegresomision, '%d/%m/%Y') as Hasta, ROUND(m.gastoviaje,4) AS gastoviaje,m.numeroacuerdo,m.boleto,m.viaticos ,m.organismopatrocinador,m.organismoinvita from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join empleadopuesto ep on e.codigoempleado=ep.codigoempleado inner join puesto p on p.codigopuesto=ep.codigopuesto
+		<![CDATA[SELECT  DATE_FORMAT(m.fechasalidamision, '%d/%m/%Y') as Desde, DATE_FORMAT(m.fecharegresomision, '%d/%m/%Y') as Hasta, TRUNCATE(m.gastoviaje,4) AS gastoviaje,m.numeroacuerdo,m.boleto,m.viaticos ,m.organismopatrocinador,m.organismoinvita from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join empleadopuesto ep on e.codigoempleado=ep.codigoempleado inner join puesto p on p.codigopuesto=ep.codigopuesto
 where m.fechasalidamision>=$P{FECHAINICIO}
 AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
 	</queryString>
@@ -189,7 +189,7 @@ AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
 				<text><![CDATA[Fecha Regreso]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="212" y="2" width="80" height="14" uuid="56e0ea94-aa33-4b1b-a28a-fb1bee4c9284"/>
+				<reportElement x="212" y="2" width="86" height="14" uuid="56e0ea94-aa33-4b1b-a28a-fb1bee4c9284"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -288,39 +288,39 @@ AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
 				<textFieldExpression><![CDATA[$F{Hasta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="216" y="0" width="100" height="14" uuid="2236456c-c864-4921-8286-d9f535d54d1a"/>
+				<reportElement x="236" y="0" width="54" height="14" uuid="2236456c-c864-4921-8286-d9f535d54d1a"/>
 				<textFieldExpression><![CDATA[$F{gastoviaje}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="22" splitType="Stretch">
+		<band height="22" splitType="Stretch"/>
+	</columnFooter>
+	<pageFooter>
+		<band height="54" splitType="Stretch"/>
+	</pageFooter>
+	<summary>
+		<band height="42" splitType="Stretch">
 			<line>
-				<reportElement x="630" y="2" width="90" height="1" uuid="4eac21f9-6c50-40d6-aa5e-dbd9194fdbe2"/>
+				<reportElement x="620" y="7" width="90" height="1" uuid="4eac21f9-6c50-40d6-aa5e-dbd9194fdbe2"/>
 			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="633" y="6" width="106" height="13" backcolor="#FFFFFF" uuid="b9f332fb-847c-412c-b60f-13b0eb194b9a"/>
+				<reportElement mode="Opaque" x="623" y="11" width="106" height="13" backcolor="#FFFFFF" uuid="b9f332fb-847c-412c-b60f-13b0eb194b9a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="200" y="0" width="102" height="1" uuid="7f6b219c-d6c8-4d1a-baa5-521dd4b482db"/>
+				<reportElement x="203" y="6" width="102" height="1" uuid="7f6b219c-d6c8-4d1a-baa5-521dd4b482db"/>
 			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="197" y="5" width="101" height="13" backcolor="#FFFFFF" uuid="9533bff5-40c5-4cd3-832d-ded03ec55d73"/>
+				<reportElement mode="Opaque" x="200" y="11" width="101" height="13" backcolor="#FFFFFF" uuid="9533bff5-40c5-4cd3-832d-ded03ec55d73"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total Gastos:    " + $V{viaticos_1}]]></textFieldExpression>
 			</textField>
 		</band>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
 	</summary>
 </jasperReport>
