--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
@@ -10,17 +10,12 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT e.codigoempleado,e.nombreempleado,e.apellidoempleado,p.nombrepuesto,p.ubicacionpuesto,DATE_FORMAT(c.fechainiciocontrato, "%d/ %m /%Y") as 'fechainiciocontrato',c.salarioactual FROM `empleado` e, puesto p, contrato c where e.codigoempleado=c.codigoempleado and e.codigopuesto=p.codigopuesto]]>
+		<![CDATA[SELECT e.codigoempleado,concat(e.nombreempleado,' ',e.apellidoempleado)as 'nombre',p.nombrepuesto,p.ubicacionpuesto,DATE_FORMAT(c.fechainiciocontrato, "%d/ %m /%Y") as 'fechainiciocontrato',c.salarioactual FROM `empleado` e, puesto p, contrato c where e.codigoempleado=c.codigoempleado and e.codigopuesto=p.codigopuesto]]>
 	</queryString>
 	<field name="codigoempleado" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="nombreempleado" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="apellidoempleado" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
+	<field name="nombre" class="java.lang.String"/>
 	<field name="nombrepuesto" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -41,114 +36,114 @@
 	</background>
 	<title>
 		<band height="131">
+			<textField>
+				<reportElement uuid="664f04b5-48d9-405f-b80d-da039a387770" x="234" y="93" width="100" height="20"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
+			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae" x="117" y="93" width="70" height="20"/>
+				<reportElement uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae" x="107" y="93" width="70" height="20"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4" x="408" y="81" width="74" height="20"/>
+				<reportElement uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4" x="405" y="93" width="74" height="20"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="d1ce97b8-d1d2-4b89-b49b-169ec8cb24c9" x="143" y="78" width="265" height="20"/>
+				<reportElement uuid="d1ce97b8-d1d2-4b89-b49b-169ec8cb24c9" x="146" y="77" width="265" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Reporte de Nuevas Contrataciones]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81" x="482" y="81" width="26" height="20"/>
+				<reportElement uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81" x="484" y="93" width="49" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="8cae14a6-c433-461f-a07b-c8abf6c60049" x="48" y="93" width="114" height="20"/>
+				<reportElement uuid="8cae14a6-c433-461f-a07b-c8abf6c60049" x="41" y="93" width="114" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="8db62085-9fe6-4b69-b055-d239c583ecf5" x="396" y="79" width="39" height="20"/>
+				<reportElement uuid="8db62085-9fe6-4b69-b055-d239c583ecf5" x="424" y="77" width="39" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f8a6159b-88a9-44b2-aa21-e0b4af67a7c3" x="289" y="100" width="39" height="20"/>
+				<reportElement uuid="f8a6159b-88a9-44b2-aa21-e0b4af67a7c3" x="297" y="93" width="39" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8" x="316" y="100" width="100" height="20"/>
+				<reportElement uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8" x="325" y="93" width="100" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="3f676349-db7f-408e-88f1-b1850570b533" x="439" y="79" width="100" height="20"/>
+				<reportElement uuid="3f676349-db7f-408e-88f1-b1850570b533" x="462" y="77" width="100" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="17454eab-9cc6-4f5e-91a6-0bc0832a2b43" x="172" y="100" width="39" height="20"/>
+				<reportElement uuid="17454eab-9cc6-4f5e-91a6-0bc0832a2b43" x="201" y="93" width="39" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
-			<textField>
-				<reportElement uuid="664f04b5-48d9-405f-b80d-da039a387770" x="199" y="100" width="100" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
-			</textField>
 			<image>
-				<reportElement uuid="a2ddf854-1451-44aa-ad8f-8c7a824aaf93" x="395" y="9" width="140" height="70"/>
+				<reportElement uuid="a2ddf854-1451-44aa-ad8f-8c7a824aaf93" x="423" y="9" width="140" height="70"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="c6efa9b9-a500-4a0f-bb16-409eeac06829" x="30" y="12" width="140" height="80"/>
+				<reportElement uuid="c6efa9b9-a500-4a0f-bb16-409eeac06829" x="23" y="12" width="140" height="80"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="e7d9fc24-1992-422f-a262-0dec7e9bcb4b" x="50" y="80" width="76" height="21"/>
+				<reportElement uuid="e7d9fc24-1992-422f-a262-0dec7e9bcb4b" x="43" y="77" width="76" height="21"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_neco]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="511346f9-c808-474d-8461-1697a8e992e9" x="146" y="19" width="265" height="20"/>
+				<reportElement uuid="511346f9-c808-474d-8461-1697a8e992e9" x="150" y="18" width="265" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="b6217f52-beae-478b-89f1-906f22c8f993" x="146" y="39" width="265" height="20"/>
+				<reportElement uuid="b6217f52-beae-478b-89f1-906f22c8f993" x="150" y="38" width="265" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="12b1d51a-1bef-438d-90aa-22a259dafb3b" x="146" y="59" width="265" height="20"/>
+				<reportElement uuid="12b1d51a-1bef-438d-90aa-22a259dafb3b" x="150" y="58" width="265" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
@@ -160,144 +155,133 @@
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band height="42">
+		<band height="14">
 			<rectangle>
-				<reportElement uuid="5d2c9f60-e28f-42c9-bf6c-cd5f2a0cf21d" x="0" y="4" width="553" height="38" backcolor="#FFFFFF"/>
+				<reportElement uuid="a32c0e7e-4766-4f7c-922c-9b972b3bbccd" x="41" y="1" width="479" height="12" backcolor="#FFFFFF"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a" mode="Transparent" x="0" y="4" width="54" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a" mode="Transparent" x="41" y="0" width="42" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Código Empleado]]></text>
+				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="e4e66651-0c88-4063-a2c0-741ac227aa51" mode="Transparent" x="55" y="4" width="182" height="37" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement uuid="e4e66651-0c88-4063-a2c0-741ac227aa51" mode="Transparent" x="84" y="0" width="142" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre del Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="b0756311-fe34-46f7-a804-a9a7437a9df2" mode="Transparent" x="237" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement uuid="b0756311-fe34-46f7-a804-a9a7437a9df2" mode="Transparent" x="226" y="0" width="90" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cargo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21" mode="Transparent" x="316" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21" mode="Transparent" x="316" y="0" width="79" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5" mode="Transparent" x="396" y="4" width="79" height="37" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5" mode="Transparent" x="396" y="0" width="79" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Fecha de Contratación]]></text>
+				<text><![CDATA[Fecha Contratación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="dfb2173e-502c-43cf-bf60-fb49c1260741" mode="Transparent" x="474" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement uuid="dfb2173e-502c-43cf-bf60-fb49c1260741" mode="Transparent" x="474" y="0" width="46" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Salario($)]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement uuid="b737e0fa-3a60-40c8-bb90-14263068fda4" x="54" y="4" width="1" height="37"/>
+				<reportElement uuid="b737e0fa-3a60-40c8-bb90-14263068fda4" x="83" y="0" width="1" height="14"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="e9f2514f-8bf2-42ed-bc54-b56ff74588ce" x="237" y="4" width="1" height="37"/>
+				<reportElement uuid="e9f2514f-8bf2-42ed-bc54-b56ff74588ce" x="224" y="0" width="1" height="14"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="8540acee-8866-4189-bda7-d708889424e3" x="315" y="4" width="1" height="38"/>
+				<reportElement uuid="8540acee-8866-4189-bda7-d708889424e3" x="315" y="0" width="1" height="14"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="894948cc-6f2b-4b03-b2db-071d5a1f4678" x="394" y="4" width="1" height="37"/>
+				<reportElement uuid="894948cc-6f2b-4b03-b2db-071d5a1f4678" x="394" y="0" width="1" height="14"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="8fcd407e-204b-45c5-a917-4c4dd84b10ca" x="474" y="4" width="1" height="37"/>
+				<reportElement uuid="8fcd407e-204b-45c5-a917-4c4dd84b10ca" x="475" y="0" width="1" height="14"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="24">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="1e6acfee-6c20-4362-bd70-58ef802e549b" x="0" y="0" width="54" height="20"/>
+				<reportElement uuid="1e6acfee-6c20-4362-bd70-58ef802e549b" x="41" y="0" width="43" height="14"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="a4137d74-cbdb-425e-841f-550510eb35d8" x="55" y="0" width="103" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement uuid="bb36aa86-dc59-4cf8-81a7-a0e32465aaee" x="237" y="0" width="79" height="20"/>
+				<reportElement uuid="bb36aa86-dc59-4cf8-81a7-a0e32465aaee" x="234" y="0" width="79" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="17c5d097-5227-4346-8009-afafcd1fdc53" x="316" y="0" width="79" height="20"/>
+				<reportElement uuid="17c5d097-5227-4346-8009-afafcd1fdc53" x="321" y="0" width="73" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ubicacionpuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="12001817-6454-4eed-b1ba-974bde67a060" x="395" y="0" width="79" height="20"/>
-				<textElement textAlignment="Center">
+				<reportElement uuid="12001817-6454-4eed-b1ba-974bde67a060" x="395" y="0" width="79" height="14"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechainiciocontrato}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="84e26bc9-bfd6-4c12-8b0d-9216e598845f" x="470" y="0" width="79" height="20"/>
+				<reportElement uuid="84e26bc9-bfd6-4c12-8b0d-9216e598845f" x="474" y="0" width="44" height="14"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new DecimalFormat("###,###,##0.00").format($F{salarioactual})]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement uuid="e89e1ef3-3839-49be-a1b1-bfd4508f78b3" x="120" y="0" width="79" height="20"/>
+			<textField>
+				<reportElement uuid="a33b808a-e65b-4bd5-bd9b-a930ac3ced8a" x="92" y="0" width="133" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{apellidoempleado}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
 		<band/>
 	</columnFooter>
-	<pageFooter>
-		<band height="44">
-			<staticText>
-				<reportElement uuid="816a5691-ef47-4091-b091-6990786bd367" x="186" y="11" width="192" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
-			</staticText>
-		</band>
-	</pageFooter>
 	<summary>
-		<band height="19">
+		<band height="37">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3" mode="Opaque" x="18" y="5" width="535" height="13" backcolor="#FFFFFF"/>
+				<reportElement uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3" mode="Opaque" x="196" y="3" width="324" height="14" backcolor="#FFFFFF"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total $" +new DecimalFormat("###,###,##0.00").format($V{salarioactual_1})]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement uuid="5b0e41b5-5380-4c85-91be-f015b99cbd8e" mode="Opaque" x="208" y="17" width="312" height="14" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" isUnderline="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
